--- a/LinCon.Avalonia/LinCon.Avalonia.csproj
+++ b/LinCon.Avalonia/LinCon.Avalonia.csproj
@@ -17,5 +17,6 @@
     <PackageReference Include="Avalonia" Version="0.8.0" />
     <PackageReference Include="Avalonia.Desktop" Version="0.8.0" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.8.0" />
+    <ProjectReference Include="..\LinCon.Core\LinCon.Core.csproj" />
   </ItemGroup>
 </Project>
